--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: XDLinux 西电开源社区
+email: xidian_linux@googlegroups.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 baseurl: ""
-url: "http://yourdomain.com"
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://xdlinux.github.io"
+twitter_username: xdlinux
+github_username:  xdlinux
 
 # Build settings
 markdown: kramdown
